Fix diff bugs and performance on long lines (#549)
* Improve performance of char diff on long lines

Effectively glorified truncation

* Escape user-generated diff content

* Replace grid layout with table layout for diff

* Fix off-by-one error from blank line in diff

* Apply diff wrapper to chars as well, and skip lines

Line skipping is necessary for performance on output of 10,000s of lines.
It's also more convenient to scroll to find changes

* Merge unchanged lines in arg diff

Allows for correctly skipping lines

* Exit early when strings are equal in diff

--- a/css/hole-diff.css
+++ b/css/hole-diff.css
@@ -1,46 +1,50 @@
-.diff-content {
-    display: grid;
-    grid-template-columns:
-        [arg] max-content
-        [left-num] minmax(20px, min-content)
-        [left] 1fr
-        [right-num] minmax(20px, min-content)
-        [right] 1fr;
-    grid-template-rows: max-content;
-    white-space: pre-wrap;
-    overflow-wrap: anywhere;
+#diff-content {
     padding: 0;
-    line-height: 1.25em;
 }
 
-.diff-content.diff-arg-type {
-    grid-template-columns:
-        [arg] max-content
-        [left] 1fr
-        [right] 1fr;
+#diff table {
+    border-collapse: separate;
+    border-spacing: 0;
+    table-layout: fixed;
+    width: 100%;
 }
 
-#diff h3 {
-    /* This is already set in hole.css but not hole-ng.css */
+#diff th {
     color: var(--background);
     background: var(--color);
+    font-size: 1.25rem;
 }
 
-/* We need a little spacing between h3#diff-arguments
-and h3#diff-output on arg diffs (which have line nums hidden) */
-
-#diff h3#diff-output,
-#diff h3#diff-expected {
-    padding-left: 3px;
+#diff td,
+#diff th {
+    line-height: 1.25rem;
 }
 
-#diff h3#diff-arguments {
-    padding-right: 3px;
+#diff td {
+    border: none;
+    vertical-align: top;
+    white-space: pre-wrap;
+    word-break: break-all;
 }
 
+#diff .diff-col-left,
+#diff .diff-col-right {
+    padding: 0 4px;
+}
+
+#diff th.diff-header-output,
+#diff th.diff-header-expected {
+    text-align: left;
+}
+
+#diff .diff-arg,
+#diff .diff-header-arguments {
+    text-align: right;
+}
+
+/* Ref .CodeMirror-linenumber and .CodeMirror-gutters */
 #diff .diff-left-num,
 #diff .diff-right-num {
-    /* Ref .CodeMirror-linenumber and .CodeMirror-gutters */
     padding: 0 3px 0 5px;
     min-width: 20px;
     text-align: right;
@@ -54,48 +58,18 @@ and h3#diff-output on arg diffs (which have line nums hidden) */
     border-right: 1px solid var(--color);
 }
 
-#diff-arguments {
-    text-align: right;
-}
-
-#diff .diff-arg {
-    grid-column: arg;
-    padding: 0 6px 0 8px;
-    text-align: right;
-}
-
-#diff .diff-left-num { grid-column: left-num }
-
-#diff .diff-title-bg {
-    /* Just let these fall into whatever columns */
-    background: var(--color);
-}
-
-#diff .diff-left,
-#diff-output {
-    grid-column: left
-}
-
-#diff .diff-right-num { grid-column: right-num }
-
-#diff .diff-right,
-#diff-expected {
-    grid-column: right
-}
-
 #diff .diff-removal { background-color: var(--diff-light-red) }
 
 #diff .diff-addition { background-color: var(--diff-light-green) }
 
-#diff .diff-left,
-#diff .diff-right {
-    padding: 0 4px;
-}
-
 #diff .diff-char-removal {
-    background-color: var(--red)
+    background-color: var(--red);
 }
 
 #diff .diff-char-addition {
-    background-color: var(--green)
+    background-color: var(--green);
+}
+
+#diff .diff-skip {
+    background-color: var(--blue);
 }
